Opraven MatchRegistrationServiceImpl.java - testováno přes postman, zjednodušení metod - funkční automatické registered/reserved